<resources>
    <string name="app_name">Stalk</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_notifications">Notifications</string>
    <string name="date">Date</string>
    <string name="ticker">Ticker</string>
    <string name="type">Type</string>
    <string name="amount">Amount</string>
    <string name="name">Name</string>
    <string name="title_saved">Saved</string>
    <string name="title_transaction_details">Transaction Details</string>
    <string name="back_button">Back</string>
    <string name="title_politician">Politician</string>
    <string name="icon_description">Icon of Stalk Trade</string>
</resources>