<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.stalk.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_transactionDetailsFragment"
            app:destination="@id/transactionDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.stalk.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_searchFragment_to_politicianFragment"
            app:destination="@id/politicianFragment">
            <argument
                android:name="politicianName"
                app:argType="string" />
            <argument
                android:name="politicianImage"
                app:argType="string" />
            <argument
                android:name="sourceFragment"
                app:argType="string" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/transactionDetailsFragment"
        android:name="com.example.stalk.ui.details.TransactionDetailsFragment"
        android:label="@string/title_transaction_details"
        tools:layout="@layout/fragment_transaction_details">
        <argument
            android:name="trade"
            app:argType="com.example.stalk.model.Trade" />
    </fragment>

    <fragment
        android:id="@+id/politicianFragment"
        android:name="com.example.stalk.ui.politician.PoliticianFragment"
        android:label="@string/title_politician"
        tools:layout="@layout/fragment_politician">
        <argument
            android:name="politicianName"
            app:argType="string" />
        <argument
            android:name="politicianImage"
            app:argType="string" />
        <argument
            android:name="sourceFragment"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_saved"
        android:name="com.example.stalk.ui.saved.SavedFragment"
        android:label="@string/title_saved"
        tools:layout="@layout/fragment_saved">
        <action
            android:id="@+id/action_navigationSaved_to_politicianFragment"
            app:destination="@id/politicianFragment">
            <argument
                android:name="politicianName"
                app:argType="string" />
            <argument
                android:name="politicianImage"
                app:argType="string" />
            <argument
                android:name="sourceFragment"
                app:argType="string" />
        </action>
    </fragment>
</navigation>
