<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.politician.PoliticianFragment"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewPoliticianName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:padding="8dp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5" />

        <ImageView
            android:id="@+id/politician_picture"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:padding="8dp"
            android:background="@drawable/image_background"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewPoliticianName" />

        <ImageButton
            android:id="@+id/notification_bell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/title_notifications"
            android:padding="8dp"
            android:src="@drawable/ic_bell_off"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- New TextViews for Transaction Volume and Performance -->
        <TextView
            android:id="@+id/textViewTransactionVolume"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="8dp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/politician_picture"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5" />

        <LinearLayout
            android:id="@+id/performanceLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/textViewTransactionVolume"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5">

            <TextView
                android:id="@+id/textViewPerformanceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Performance: "
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingEnd="2dp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textViewPerformanceSign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingStart="2dp" />
        </LinearLayout>

        <!-- Column Headers -->
        <LinearLayout
            android:id="@+id/columnHeaders"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:padding="8dp"
            android:background="#5D3FD3"
            app:layout_constraintTop_toBottomOf="@id/performanceLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ticker"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/type"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/amount"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:gravity="center" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trade_history_recyclerview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/columnHeaders"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
